# blog-writer

./: langgraph.json  pyproject.toml
src/: app.py  research_assistant.ipynb  sections.py  utils.py
src/notebooks/: research_assistant.ipynb  sections_outliner.ipynb
src/workflows/research_assistant/: graph.py  models.py  prompt.py  research_assistant.py  state.py
src/workflows/sections_outliner/: graph.py  model.py  prompt.py  state.py
