[project]
name = "blog-writer"
version = "0.1.0"
description = ""
authors = [
    {name = "juanarancibia",email = "arancibia.juan22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "langgraph (>=0.2.70,<0.3.0)",
    "langchain-openai (>=0.3.4,<0.4.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tavily-python (>=0.5.1,<0.6.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
